--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,16 +14,19 @@ html {
 
 :root {
   /* colors */
-  --primary-50: #e0fcff;
-  --primary-100: #bef8fd;
-  --primary-200: #87eaf2;
-  --primary-300: #54d1db;
-  --primary-400: #38bec9;
-  --primary-500: #2cb1bc;
-  --primary-600: #14919b;
-  --primary-700: #0e7c86;
-  --primary-800: #0a6c74;
-  --primary-900: #044e54;
+  --primary-50: #e0fffc;
+  --primary-100: #add5f8;
+  --primary-200: #88bfee;
+  --primary-300: #69aae2;
+  --primary-400: #408fd4;
+  --primary-500: #297bc2;
+  --primary-600: #1d6bb0;
+  --primary-700: #175b97;
+  --primary-800: #124979;
+  --primary-900: #0c3961;
+
+
+
 
   /* grey */
   --grey-50: #f8fafc;
@@ -41,8 +44,8 @@ html {
   --white: #fff;
   --red-light: #f8d7da;
   --red-dark: #842029;
-  --green-light: #d1e7dd;
-  --green-dark: #0f5132;
+  --green-light: #88bfee;
+  --green-dark: #095699;
 
   --small-text: 0.875rem;
   --extra-small-text: 0.7em;
@@ -230,7 +233,7 @@ button:disabled {
 }
 /* form */
 
-.form {
+/* .form {
   width: 90vw;
   max-width: var(--fixed-width);
   background: var(--background-secondary-color);
@@ -238,16 +241,16 @@ button:disabled {
   box-shadow: var(--shadow-2);
   padding: 2rem 2.5rem;
   margin: 3rem auto;
-}
-.form-label {
+} */
+/* .form-label {
   display: block;
   font-size: var(--small-text);
   margin-bottom: 0.75rem;
   text-transform: capitalize;
   letter-spacing: var(--letter-spacing);
   line-height: 1.5;
-}
-.form-input,
+} */
+/* .form-input,
 .form-textarea,
 .form-select {
   width: 100%;
@@ -256,15 +259,15 @@ button:disabled {
   background: var(--background-color);
   border: 1px solid var(--grey-300);
   color: var(--text-color);
-}
-.form-input,
+} */
+/* .form-input, */
 .form-select,
 .form-btn {
   height: 35px;
 }
-.form-row {
+/* .form-row {
   margin-bottom: 1rem;
-}
+} */
 
 .form-textarea {
   height: 7rem;
